--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.khodakovskyi</groupId>
-    <artifactId>Test</artifactId>
+    <artifactId>TestMock</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
